--- a/aaronw5-corner/package.json
+++ b/aaronw5-corner/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.6",
+    "dotenv": "^17.0.0",
     "fs-imagesize": "^0.1.3",
+    "mongodb": "^6.17.0",
     "motion": "^12.19.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
