--- a/aaronw5-corner/package.json
+++ b/aaronw5-corner/package.json
@@ -14,6 +14,7 @@
     "motion": "^12.19.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
