--- a/aaronw5-corner/server/vercel.json
+++ b/aaronw5-corner/server/vercel.json
@@ -2,8 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "server.mjs",
-            "use": "@vercel/node"
+            "src": "server.mjs"
         }
     ],
     "rewrites": [
