--- a/aaronw5-corner/server/vercel.json
+++ b/aaronw5-corner/server/vercel.json
@@ -1,9 +1,15 @@
 {
     "version": 2,
+    "builds": [
+        {
+            "src": "server.mjs",
+            "use": "@vercel/node"
+        }
+    ],
     "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "server.mjs"
+            "dest": "server.mjs"
         }
     ]
 }
