--- a/aaronw5-corner/server/vercel.json
+++ b/aaronw5-corner/server/vercel.json
@@ -9,7 +9,7 @@
     "rewrites": [
         {
             "source": "/(.*)",
-            "dest": "server.mjs"
+            "destination": "server.mjs"
         }
     ]
 }
