--- a/aaronw5-corner/server/vercel.json
+++ b/aaronw5-corner/server/vercel.json
@@ -9,7 +9,15 @@
     "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "server.mjs"
+            "destination": "server.mjs",
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "PATCH",
+                "DELETE",
+                "OPTIONS"
+            ]
         }
     ]
 }
