--- a/aaronw5-corner/server/vercel.json
+++ b/aaronw5-corner/server/vercel.json
@@ -9,15 +9,7 @@
     "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "server.mjs",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "PATCH",
-                "DELETE",
-                "OPTIONS"
-            ]
+            "destination": "server.mjs"
         }
     ]
 }
